Fixed Alignment of Tax and Price in Product Card of Collection Page

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -487,7 +487,7 @@
 }
 
 .card-information > * + * {
-  margin-top: 0.5rem;
+ /*  margin-top: 0.5rem; */
 }
 
 .card-information {
@@ -520,7 +520,7 @@
 }
 
 .card-information > *:not(.visually-hidden:first-child) + *:not(.rating):not(.card__information-volume-pricing-note) {
-  margin-top: 0.7rem;
+  /* margin-top: 0.7rem; */
 }
 
 .card-information .caption {
@@ -678,6 +678,7 @@
   flex-direction: column;
   justify-content: space-between;
   flex: 1;
+  gap: 1rem;
 }
 
 .price-add-to-cart-container{
@@ -686,7 +687,7 @@
   /* align-items: center; */
   align-items: end;
   /* min-height: 4rem; */
-  padding-top: 0.3rem;
+  /* padding-top: 0.3rem; */
 
 }
 
